; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_bitmap.c_bitmap_ensure_allocated.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_bitmap.c_bitmap_ensure_allocated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bitmap_ensure_allocated(i32** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32**, align 8
  %4 = alloca i32*, align 8
  store i32** %0, i32*** %3, align 8
  %5 = load i32**, i32*** %3, align 8
  %6 = call i32 @assert(i32** %5)
  %7 = load i32**, i32*** %3, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

11:                                               ; preds = %1
  %12 = call i32* (...) @bitmap_new()
  store i32* %12, i32** %4, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %18, label %15

15:                                               ; preds = %11
  %16 = load i32, i32* @ENOMEM, align 4
  %17 = sub nsw i32 0, %16
  store i32 %17, i32* %2, align 4
  br label %21

18:                                               ; preds = %11
  %19 = load i32*, i32** %4, align 8
  %20 = load i32**, i32*** %3, align 8
  store i32* %19, i32** %20, align 8
  store i32 0, i32* %2, align 4
  br label %21

21:                                               ; preds = %18, %15, %10
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @assert(i32**) #1

declare dso_local i32* @bitmap_new(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
